tests/init/neg/promotion-loop.check
-- Error: tests/init/neg/promotion-loop.scala:16:10 --------------------------------------------------------------------
16 |  println(b)      // error
   |          ^
   |  Cannot prove the argument is fully initialized. Only fully initialized values are safe to leak. Calling trace:
   |  -> class Test { test =>	[ promotion-loop.scala:1 ]
   |     ^
   |  -> println(b)      // error	[ promotion-loop.scala:16 ]
   |             ^
   |
   |  Promoting the value to fully initialized failed due to the following problem:
   |  Cannot prove that the field val outer is fully initialized.
